<resources>
    <string name="version">Version</string>
    <string name="USA">USA</string>
    <string name="China">China</string>
    <string name="country_location">Country/Location</string>
    <string name="app_name">SamChat</string>
    <string name="settings">Sam-Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sam_services">Sam-search</string>
    <string name="sam_chats">Sam-chat</string>
    <string name="sam_me">Me</string>
    <string name="sam_vendor">Sam-pro</string>
    <string name="sam_public">Sam-public</string>
    <string name="sam_contact">Sam-contact</string>
    <string name="action_search">Search</string>
    <string name="action_plus">Add</string>
    <string name="action_album">Album</string>
    <string name="action_collection">Favirate</string>
    <string name="action_card">Bank Card</string>
    <string name="action_feed">Feedback</string>
    <string name="plus_group_chat">Grop Chat</string>
    <string name="plus_add_friend">Add Friend</string>
    <string name="plus_video_chat">Video Chat</string>
    <string name="plus_scan">Scan</string>
    <string name="plus_take_photo">Take Photo</string>
    <string name="ask_question">Ask help from Sam &#8230;&#8230;&#8230; </string>
    <string name="network_status_no">No Network!</string>
    <string name="network_status_error">Network Error!</string>
    <string name="sam_register">Sign Up</string>
    <string name="sam_signin">Sign In</string>
    <string name="weixin_signin">WeiXin Sign In</string>
    <string name="username">Phone/Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forget_passwd">forget password ?</string>
    <string name="cancel">Cancel</string>
    <string name="phonenumber">phone number</string>
    <string name="send_verify_code">send veriy code</string>
    <string name="verify_code">input verify code</string>
    <string name="next_step">Next step</string>
    <string name="agreement">agree</string>
    <string name="sam_protocol">sam user protocol</string>
    <string name="sam_vendor_protocol">sam vendor protocol</string>
    <string name="sam_account">Account</string>
    <string name="username_limit">3~15 username</string>
    <string name="username_used">used</string>
    <string name="password_limit">6~32 password</string>
    <string name="password_safe">safe</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="cc_illegal_title">Country Code Error</string>
    <string name="cc_illegal_statement">Sorry, SamChat only support China and US now!</string>
    <string name="ph_illegal_title">Phone Number Error</string>
    <string name="ph_illegal_statement">Please input correct phone number!</string>
    <string name="sign_up_now">Signing up now ......</string>
    <string name="sign_in_now">Signing in now ......</string>
    <string name="nw_illegal_title">Network Error</string>
    <string name="sign_in_timeout_title">Sign in timeout</string>
    <string name="sign_in_timeout_statement">Sign in timeout,please try again later</string>
    <string name="sign_up_timeout_title">Sign up timeout</string>
    <string name="sign_up_timeout_statement">Sign up timeout,please try again later</string>
    <string name="exit_app_confirmation">Exit application if click again</string>
    <string name="sign_in_failed_title">Sign in failed</string>
    <string name="sign_in_failed_reason_unpd">username or passwd is wrong,please input again</string>
    <string name="sign_in_failed_reason_others">network error,please try again later</string>
    <string name="sign_up_failed_title">Sign up failed</string>
    <string name="sign_up_failed_reason_unph">username or phone number has been existed!</string>
    <string name="sign_up_failed_reason_others">sign up error!please try again later</string>
    <string name="sign_up_succeed_but_sign_in_failed">sign up succeed but sign in failed!please sign in again</string>
    <string name="sign_up_uname_existed">username existed,input again!</string>
    <string name="samservice_search">search</string>
    <string name="samservice_top_serach_txt">Top Search</string>
    <string name="samservice_answer">more answer is coming ......</string>
    <string name="cancel_search">cancel search</string>
    <string name="reminder">Reminder</string>
    <string name="cancel_reminder">Are you sure cancel the question?</string>
    <string name="question_publish">Publish</string>
    <string name="question_publish_now">Publish now ......</string>
    <string name="question_publish_failed">Publish Failed</string>
    <string name="question_cancel">Cancel</string>
    <string name="question_cancel_now">Cancel now ......</string>
    <string name="question_cancel_failed">Cancel Failed</string>
    <string name="question_action_error_statement">Make sure network connection worked</string>
    <string name="question_action_server_error_statement">Server error, please try again later</string>
    <string name="exit_app">Close app</string>
    <string name="logout">Logout account</string>
    <string name="exitapp_reminder">if close app,message could not be received immediately.It will have impact to user experience.</string>
    <string name="logout_reminder">Hisotry data will not be deleted although logout.The data could also be used if login next time.</string>
    <string name="upgrade">upgrade to servicer</string>
    <string name="sam_gbdy">Sam, Come on!</string>
	<string name="process">Waiting ......</string>
    <string name="upgrade_reminder">Servicer could received the question from end user.Excellent servicer could get bonus.</string>
    <string name="upgrade_already">You are servicer already, do not need to apply again</string>
	<string name="upgrade_failed_title">apply failed</string>
    <string name="upgrade_succeed_title">apply succeed</string>
    <string name="upgrade_failed_statement">apply failed，Please try again later.</string>
    <string name="upgrade_succeed_statement">Congratulation。You have been succeessfully to be our servicer, we appreacitate your contribution</string>
    <string name="sam_question_and_answer">Sam QA</string>
    <string name="answer">answer</string>
    <string name="temp_talk">Talking Now</string>
    <string name="add_friends">Add Friends</string>
    <string name="start_talk">Start Talk</string>
    <string name="follow">Follow Me</string>
    <string name="cancel_follow">Cancel Follow</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="start_group">Start Group</string>
    <string name="new_friends">New Friends</string>
    <string name="new_friends_search_hint">phone number</string>
    <string name="query_user_info_failed_title">Search Failed </string>
    <string name="query_user_info_failed_statement">search failed, try again later</string>
    <string name="query_user_info_no_user_statement">phone number is not existed</string>
    <string name="user_info">User Information</string>
    <string name="residence">Resident City</string>
    <string name="visitence">Visit City</string>
    <string name="career_info">Career Information</string>
    <string name="social_info">Social Information</string>
    <string name="add_to_contacts">add to contacts</string>
    <string name="send_msg">send message</string>
    <string name="send">send</string>
    <string name="send_msg_statement">you need send verification application and wait for approve</string>
    <string name="send_msg_failed">send message failed ......</string>
    <string name="send_msg_succeed">send message successfully ......</string>
    <string name="request_add_friends">request to be friend</string>
    <string name="accept">accept</string>
    <string name="added">added</string>
    <string name="refused">refused</string>
    <string name="refuse">refuse</string>
    <string name="groupchat">Group Chat</string>
    <string name="The_new_group_chat">New Group Chat</string>
    <string name="group_nick">Group Nick:</string>
    <string name="group_owner">Group Owner:</string>
    <string name="messages_are_empty">messages are empty</string>
    <string name="delete">delete</string>
    <string name="move_to_blacklist">move into blacklist</string>
    <string name="move_from_blacklist">move from blacklist</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_statement">If delete this contact, the chat history with him will be also deleted</string>
    <string name="avatar">head portrait</string>
    <string name="start_crop_window_failed">start crop window failed</string>
    <string name="uploading_avatar">uploading avatar </string>
    <string name="new_msg_reminder">new message reminder</string>
    <string name="privacy">privacy</string>
    <string name="security_setting">security setting</string>
    <string name="feedback">feedback</string>
    <string name="old_passwd">input password</string>
    <string name="new_passwd">input new password</string>
    <string name="confrim_passwd">input new password again</string>
    <string name="enable_new_msg_reminder">enable new msg reminder</string>
    <string name="voice">voice</string>
    <string name="vibrate">vibrate</string>
    <string name="blacklist_in_contact">blacklist</string>
    <string name="send_feedback_succeed">feedback send successfully</string>
    <string name="send_feedback_succeed_statement">Thanks for your feedback, we will check seriouly and do more progress for our platform</string>
    <string name="send_feedback_failed">feedback send successfully</string>
    <string name="send_feedback_failed_statement">feedback send successfully,please make sure the network is available</string>
    <string name="sam_friend_group">Friend Group</string>
    <string name="cancel_fg_reminder">Are you sure to cancel this edit?</string>
    <string name="comments_hint">What is your comments。。。</string>
    <string name="failed_to_friend_group_information">failed to refresh friend group information。。。</string>
    <string name="loading">loading。。。</string>
    <string name="your_question">question:</string>
    <string name="my_answer">answer:</string>
    <string name="responsed_question">question responsed</string>
    <string name="unresponsed_question">question unresponsed</string>
    <string name="welcome_to_be">Welcom to be</string>
    <string name="to_be_samvendor">\"Sam Vendor\"</string>
    <string name="input_vendor_info">please input information below</string>
    <string name="bussiness_line">business line</string>
    <string name="bussiness_location">business location</string>
    <string name="bussiness_introduction">business brief description</string>
    <string name="vendor_info_input">sam vendor information input</string>
    <string name="my_business">my business</string>
    <string name="location">location</string>
    <string name="mainpage">mainpage</string>
    <string name="modify">modify</string>
    <string name="follow_succeed">follow succeed</string>
    <string name="follow_failed">follow failed</string>
    <string name="cancel_follow_succeed">cancel follow succeed</string>
    <string name="cancel_follow_failed">cancel follow failed</string>
    <string name="address">address</string>
    <string name="name">name</string>
    <string name="two_dimension">two dimension code</string>
    <string name="sex">sex</string>
    <string name="hobby">hobby</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="nofill">none</string>
    <string name="store">store</string>
    <string name="sweep">Add friend by sweep</string>
    <string name="notification">new question is received</string>
    <string name="notification_title">Sam Service</string>
</resources>