<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="#007968"
        android:gravity="center"
        android:textColor="@color/common_white"
        android:textSize="18sp"
        android:text="@string/settings"/>
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:orientation="horizontal" >
    
      <TextView
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/sam_contact"/>
      
      <TextView
        android:id="@+id/contact_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/common_white"
        android:gravity="center"
        android:text="new"
        android:background="@drawable/reminder_point_bg"
        android:visibility="invisible"/>
    
    </LinearLayout>>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/listview_gray_devider"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:text="@string/settings"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/listview_gray_devider"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:text="@string/logout"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/listview_gray_devider"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/exitapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:text="@string/exit_app"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/listview_gray_devider"
        android:layout_marginTop="5dp"/>
    
    <TextView
        android:id="@+id/me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:text="@string/sam_me"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/listview_gray_devider"
        android:layout_marginTop="5dp"/>
    

</LinearLayout>
